Changes in devel (version 1.1)
+ Remove dual likelihood functions for overdispersion estimation.
Instead merge functionality into conventional_***. This should
cause no user facing changes, however should make it easier to
maintain the package
+ Make conventional_score_function_fast() more robust to extreme
inputs. Avoid numerically imprecise subtractions and employ
bounds based on series expansions for very small input
+ If dispersion estimate quits because there is no maximum or
all y are 0, return iterations = 0
+ Add limits (1e-16 / 1e16) for nlminb estimates of the
dispersion. This protects against errors due to NA's in
the conventional_likelihood_fast
+ Automatically set 'size_factors = FALSE' for input with
0 or 1 row. This will change the estimated beta, but not the
mu's
+ Rename gampoi_overdispersion_mle() -> overdispersion_mle()


Changes in version 0.0.99 (2020-03-23)
+ Submitted to Bioconductor