@@ -13,6 +13,7 @@ export(overdispersion_shrinkage)
 export(test_de)
 import(Rcpp)
 import(stats)
+importFrom(SummarizedExperiment,assay)
 importFrom(methods,as)
 importFrom(methods,canCoerce)
 importFrom(methods,is)
