@@ -104,6 +104,7 @@ sample.}
 \item{\code{size_factors}}{a vector with length \code{ncol(data)}. The size factors are the inferred
 correction factors for different sizes of each sample. They are also sometimes called the
 exposure factor.}
+\item{\code{data}}{a \code{SummarizedExperiment} that contains the input counts and the \code{col_data}}
 \item{\code{model_matrix}}{a matrix with dimensions \verb{ncol(data) x n_coefficients}. It is build based
 on the \code{design} argument.}
 }
